--- a/serenity-git/PKGBUILD
+++ b/serenity-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 
 pkgname=serenity-git
-pkgver=20100813
+pkgver=20100818
 pkgrel=1
 pkgdesc="Command line driven automated episode renamer."
 arch=('any')
@@ -11,7 +11,7 @@ depends=('bash>=4.0' 'curl')
 makedepends=('git')
 backup=('etc/serenity.conf')
 
-_gitroot="git://github.com/fleger/serenity.git"
+_gitroot="http://github.com/fleger/serenity.git"
 _gitname="serenity"
 
 build() {
