update-fstab: AUR needs a build() function

--- a/update-fstab/PKGBUILD
+++ b/update-fstab/PKGBUILD
@@ -10,6 +10,6 @@ license=('GPL')
 source=("update-fstab.sh")
 md5sums=('e1060e04f419bdb003e96a4b528f40c9')
 
-package() {
+build() {
   install -D -m755 "${srcdir}/update-fstab.sh" "${pkgdir}/usr/bin/update-fstab"
 }
