--- a/dos32a/PKGBUILD
+++ b/dos32a/PKGBUILD
@@ -10,7 +10,7 @@ url="http://dos32a.narechk.net"
 md5sums=('f37ae16b8eab499edb6b0de0099827ca')
 source=("http://download.narechk.net/${pkgname}-${pkgver//./}-bin.zip")
 
-package() {
+build() {
   cd "$srcdir"
   install -D -m644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE" || return 1
   cd "binw"
