--- a/darkforces/darkforces.desktop
+++ b/darkforces/darkforces.desktop
@@ -7,8 +7,8 @@ Encoding=UTF-8
 Version=1.0
 Type=Application
 Terminal=false
-Icon=dark-forces
-Exec=dark-forces
+Icon=darkforces
+Exec=darkforces
 Categories=Game;ActionGame;
 
 
