--- a/cursed-treasure/PKGBUILD
+++ b/cursed-treasure/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 
 pkgname=cursed-treasure
-pkgver=1.06D
+pkgver=1.06E
 pkgrel=1
 pkgdesc='A neat Tower Defense game with new twists (Flash game).'
 arch=('i686' 'x86_64')
@@ -16,7 +16,7 @@ source=("${_baseurl}/${_swf}"
         "${pkgname}.desktop"
         "${pkgname}.png"
         "${pkgname}.sh")
-md5sums=('855382145c580b5cb519563cd0373b46'
+md5sums=('929fc5a8fc09c28ee79759edfcda1740'
          '42e68388a482b0723096d076d3d39c40'
          '800d9ce68c863241ce4672dfcd2bdfbe'
          '00ba354d05d6ecf886522f11cc608b7f')
