--- a/foo-uie-lyrics2/PKGBUILD
+++ b/foo-uie-lyrics2/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 pkgname=foo-uie-lyrics2
 pkgver=0.4.6.15
-pkgrel=1
+pkgrel=2
 pkgdesc="A lyrics display plugin for foobar2000."
-arch=(i686 x86_64)
+arch=(any)
 url="http://code.google.com/p/foo-display-lyrics/"
 license=('LGPL')
 depends=(foobar2000)
