--- a/pyrss2gen/PKGBUILD
+++ b/pyrss2gen/PKGBUILD
@@ -7,7 +7,7 @@ pkgdesc="A Python library for generating RSS 2.0 feeds."
 arch=('any')
 url='http://www.dalkescientific.com/Python/PyRSS2Gen.html'
 license=('BSD')
-depends=('python')
+depends=('python2')
 makedepends=('setuptools')
 source=("http://www.dalkescientific.com/Python/PyRSS2Gen-${pkgver}.tar.gz")
 md5sums=('b37ed0c9cfa4438a73dbbb0207f3aff6')
@@ -15,6 +15,6 @@ md5sums=('b37ed0c9cfa4438a73dbbb0207f3aff6')
 build() {
   cd "$srcdir/PyRSS2Gen-$pkgver"
   install -Dm644 LICENSE ${pkgdir}/usr/share/license/${pkgname}/LICENSE
-  python setup.py install --root="$pkgdir" || return 1
+  python2 setup.py install --root="$pkgdir" || return 1
 }
 
