--- a/qttvdb/PKGBUILD
+++ b/qttvdb/PKGBUILD
@@ -15,7 +15,7 @@ md5sums=('7c02e7bc0ccf53fc9f72948058c09769')
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
 
-  mkdir build
+  mkdir -p build
   cd build
   cmake .. -DCMAKE_INSTALL_PREFIX=/usr || return 1
   make || return 1
