x-wing-1.0-2: better .desktop

--- a/x-wing/x-wing.desktop
+++ b/x-wing/x-wing.desktop
@@ -10,6 +10,6 @@ Type=Application
 Terminal=false
 Icon=x-wing
 Exec=x-wing
-Categories=Game;Simulation;
+Categories=Application;Game;Simulation;
 
 
