--- a/cursed-treasure/PKGBUILD
+++ b/cursed-treasure/PKGBUILD
@@ -1,11 +1,11 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 
 pkgname=cursed-treasure
-pkgver=1.06E
+pkgver=1.07C
 pkgrel=1
 pkgdesc='A neat Tower Defense game with new twists (Flash game).'
 arch=('i686' 'x86_64')
-url='http://www.iriysoft.ru/'
+url='http://www.iriysoft.ru/projects/flash/cursed-treasure'
 license=('custom')
 depends=()
 [ "$CARCH" = i686   ] && depends=('flashplayer-standalone')
@@ -16,10 +16,11 @@ source=("${_baseurl}/${_swf}"
         "${pkgname}.desktop"
         "${pkgname}.png"
         "${pkgname}.sh")
-md5sums=('929fc5a8fc09c28ee79759edfcda1740'
+md5sums=('4f4f08a16d283629d54af147f053f570'
          '42e68388a482b0723096d076d3d39c40'
          '800d9ce68c863241ce4672dfcd2bdfbe'
          '00ba354d05d6ecf886522f11cc608b7f')
+
 
 build() {
   # Install the .swf file
