--- a/serenity-git/PKGBUILD
+++ b/serenity-git/PKGBUILD
@@ -1,13 +1,13 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 
 pkgname=serenity-git
-pkgver=20101009
+pkgver=20101225
 pkgrel=1
 pkgdesc="Command line driven automated episode renamer."
 arch=('any')
 url="http://github.com/fleger/serenity"
 license=('GPL')
-depends=('bash>=4.0' 'curl')
+depends=('bash>=4.0' 'curl' 'html-xml-utils')
 makedepends=('git')
 backup=('etc/serenity.conf')
 
