foobar2000-1.1.2-1: new upstream release

--- a/foobar2000/PKGBUILD
+++ b/foobar2000/PKGBUILD
@@ -1,31 +1,27 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 pkgname=foobar2000
-pkgver=1.1.1
+pkgver=1.1.2
 pkgrel=1
 pkgdesc="An advanced freeware audio player (uses Wine)."
 arch=(any)
 url="http://www.foobar2000.org/"
 license=('custom')
-depends=()
 depends=(wine desktop-file-utils)
 makedepends=(p7zip)
-source=("http://www.free-codecs.com/download_soft.php?d=5887"
-#         "http://download.oldapps.com/Foobar/${pkgname}_v${pkgver}.exe"
+source=("http://www.free-codecs.com/download_soft.php?d=6172"
         "LICENSE"
         ${pkgname}.sh
         "http://upload.wikimedia.org/wikipedia/en/7/7c/Foobar2000_Icon.svg"
-        ${pkgname}.desktop
-)
-noextract=()
+        ${pkgname}.desktop)
 install=${pkgname}.install
-
-md5sums=('aec63212687dbc817ffafa487854b85b'
+md5sums=('6616325484920a7ad708960b51103443'
          '91873c4c3115bdd1afcf52c3023dc896'
          '63f65a22001873c7b765e06f6c66707f'
          'f417c64b07b55da01f06345861511386'
          '138cb528cb0cad4e2764c3c77555369c')
+                                    
 
-build() {
+package() {
     # Set up the environment
     local tmpdir="${srcdir}/foobar2000"
     local -A files
