--- a/foo-uie-lyrics2/PKGBUILD
+++ b/foo-uie-lyrics2/PKGBUILD
@@ -1,15 +1,15 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 pkgname=foo-uie-lyrics2
 pkgver=0.4.6.15
-pkgrel=2
+pkgrel=3
 pkgdesc="A lyrics display plugin for foobar2000."
 arch=(any)
-url="http://code.google.com/p/foo-display-lyrics/"
+url="http://www.hydrogenaudio.org/forums/index.php?showtopic=76968"
 license=('LGPL')
 depends=(foobar2000)
-source=("http://foo-display-lyrics.googlecode.com/files/${pkgname//-/_}_${pkgver}.zip")
-md5sums=('b07f2595b83ad1b8a348f5da40b25f91')
+source=("http://chef-koch.googlecode.com/svn/trunk/Foobar2000/components/${pkgname//-/_}.dll")
+md5sums=('f1169a2a9b37569cda3103187fe57c7d')
 
-build() {
-    install -D -m644 ${srcdir}/${pkgname//-/_}.dll ${pkgdir}/usr/share/foobar2000/components/${pkgname//-/_}.dll || return 1
+package() {
+  install -D -m644 "${srcdir}/${pkgname//-/_}.dll" "${pkgdir}/usr/share/foobar2000/components/${pkgname//-/_}.dll" || return 1
 }
