nxt-python-2.0.2-1: new upstream release

--- a/nxt-python/PKGBUILD
+++ b/nxt-python/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot fr>
 
 pkgname=nxt-python
-pkgver=2.0.1
+pkgver=2.0.2
 pkgrel=1
 pkgdesc="A Python driver/interface for the Lego Mindstorms NXT robot."
 arch=('any')
@@ -13,12 +13,12 @@ optdepends=('python-pybluez: for Bluetooth support'
 )
 makedepends=('python2-distribute')
 conflicts=("lejos_nxj")
-source=("http://nxt-python.googlecode.com/files/${pkgname}-${pkgver}.zip"
+source=("http://nxt-python.googlecode.com/files/${pkgname}-${pkgver}.tar.gz"
         "70-lego.rules"
 )
-md5sums=('d2ae2e09accd07ce3903286523a829cf'
+md5sums=('0f7ff6978c66a4ed274dd86edabb8969'
          'c449bd90ace95fa03b04c8d4e46fd613')
-
+         
 install="${pkgname}.install"
 
 build() {
