cpuminer-git-20110215-1: install new json configuration file in /etc and load it when started as a daemon

--- a/cpuminer-git/PKGBUILD
+++ b/cpuminer-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Florian Léger <florian6 dot leger at laposte dot net>
 
 pkgname=cpuminer-git
-pkgver=20110206
-pkgrel=2
+pkgver=20110215
+pkgrel=1
 pkgdesc="Multi-threaded CPU miner for bitcoin."
 arch=('i686' 'x86_64')
 url="http://yyz.us/bitcoin/"
@@ -11,9 +11,9 @@ depends=('curl' 'jansson')
 makedepends=('git')
 source=(rc-script.cpuminer
         cpuminer.conf)
-backup=(etc/conf.d/cpuminer.conf)
+backup=(etc/conf.d/cpuminer.conf etc/cpuminer.json)
 md5sums=('a014ba1a7ea4240c585be90822db9315'
-         'a5e357013eae8b231cad2ed2d4ca1ad3')
+         '96ee832cea2ff946bb890669cc7d34a0')
 
 _gitroot="http://github.com/jgarzik/cpuminer.git"
 _gitname="cpuminer"
@@ -45,6 +45,7 @@ build() {
 package() {
   cd "$srcdir/$_gitname-build"
   make DESTDIR="$pkgdir/" install || return 1
+  install -Dm600 "example-cfg.json" "$pkgdir/etc/cpuminer.json"
   install -Dm644 "$srcdir/cpuminer.conf" "$pkgdir/etc/conf.d/cpuminer.conf" || return 1
   install -Dm755 "$srcdir/rc-script.cpuminer" "$pkgdir/etc/rc.d/cpuminer" || return 1
 }
