--- a/cpuminer-git/cpuminer.conf
+++ b/cpuminer-git/cpuminer.conf
@@ -6,4 +6,4 @@
 CPUMINER_WRAPPERS=()
 
 # See `minerd --help` for all available options.
-CPUMINER_ARGS=(--quiet --retries -1)
+CPUMINER_ARGS=(--config /etc/cpuminer.json)
